--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,54 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:black
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper{
+  background-color: white;
+  width: 400px;
+  /* border-radius: 16px; */
+}
+.row{
+  display: flex;
+}
+.button-wrapper {
+  height: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  background-color: #5a5a5a;
+  color: white;
+  flex: 1;
+  margin: 4px;
+  margin-top: 4px;
+  border-radius: 25px;
+}
+.input-wrapper {
+  height: 10em;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  padding: 16px;
+}
+
+.result {
+  flex: 1;
+  font-size: 24px;
+}
+
+.text {
+  flex: 1;
+  font-size: 18px;
 }
